--- a/bm.html
+++ b/bm.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Benchmarking nacl cryptography in the browser</title>
-    <script src="browser/nacl.js"></script>
+    <script src="build/nacl.js"></script>
     <script src="bm.js"></script>
   </head>
   <body>
