--- a/benchmark.html
+++ b/benchmark.html
@@ -3,7 +3,7 @@
   <head>
     <title>Benchmarking nacl cryptography in the browser</title>
     <script src="build/nacl.js"></script>
-    <script src="bm.js"></script>
+    <script src="benchmark.js"></script>
   </head>
   <body>
     <pre id="output"></pre>
