--- a/test_nacl_browser.html
+++ b/test_nacl_browser.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Testing nacl cryptography in the browser</title>
-    <script src="build/nacl.js"></script>
+    <script src="lib/nacl.js"></script>
     <script src="test_nacl.js"></script>
     <script>
     function main() {
