--- a/benchmark.html
+++ b/benchmark.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Benchmarking nacl cryptography in the browser</title>
-    <script src="lib/nacl.js"></script>
+    <script src="lib/nacl_factory.js"></script>
     <script src="benchmark.js"></script>
   </head>
   <body>
