Switch benchmark and test harnesses over to tweetnacl.js

--- a/test/runner.html
+++ b/test/runner.html
@@ -10,7 +10,7 @@
     <div id="mocha"></div>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('exports');</script>
-    <script src="../lib/nacl_factory.js"></script>
+    <script src="../tweetnacl.js"></script>
     <script>
       var nacl = nacl_factory.instantiate();
       var assert = (function () {
